--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ span{
     text-align: start;
     margin: 0;
     box-sizing: border-box;
+    text-transform: uppercase;
+
   }
 
 /* image part */
@@ -148,5 +150,6 @@ span{
     }
     .numbers p{
         font-size: 0.8rem;
+        margin: 4px 0;
     }
   }
